# governance-linter

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIRE_LINE.md  LICENSE  README.md
.github/actions/governance-lint/: action.yml
docs/: ci-integration.md  rules.md
ide-rules/: .cursorrules  .windsurfrules
python/: pyproject.toml
python/src/governance_linter/: __init__.py  autofix.py  cli.py  linter.py  suppression.py
python/src/governance_linter/rules/: __init__.py  base.py  no_hardcoded_trust_level.py  no_ungoverned_tool_call.py  no_unlogged_action.py  require_budget_check.py  require_consent_check.py
python/tests/: conftest.py  test_governance_linter.py
semgrep/: governance-rules.yml
typescript/: package.json  tsconfig.json  tsup.config.ts
typescript/src/: index.ts  utils.ts
typescript/src/rules/: no-hardcoded-trust-level.ts  no-ungoverned-tool-call.ts  no-unlogged-action.ts  require-budget-check.ts  require-consent-check.ts
vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-extension/src/: diagnostics.ts  extension.ts
