[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aumos-governance-linter"
version = "0.1.0"
description = "Python AST-based linter for governance compliance in agent code"
readme = "../../README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "MuVeraAI Corporation" },
]
keywords = ["governance", "linter", "agent", "static-analysis", "aumos"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
governance-lint = "governance_linter.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/governance_linter"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
